# huffmanOptimization

./: .gitignore  CMakeLists.txt  README.md  test
include/: heap.h  huffman.h  node.h  symbol_table.h  table.h
src/: heap.c  huff_encode.c  huff_tree.c  main.c  node.c  symbol_table.c  table.c
tests/: freq_table.txt  input.txt
